[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Characters/Player/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Coins/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/MenuLayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/solo.ogg" type="AudioStream" id=9]
[ext_resource path="res://UI/TouchScreen.tscn" type="PackedScene" id=10]

[node name="World" type="Node2D"]
script = ExtResource( 4 )
Xalimos = ExtResource( 5 )
Coins = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="MenuLayer" parent="." instance=ExtResource( 8 )]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 686.171 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="XalimoContainer" type="Node" parent="."]

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="CoinTimer" type="Timer" parent="."]

[node name="CoinContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 115, 427 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="TouchScreen" parent="." instance=ExtResource( 10 )]

[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]

[editable path="Ground"]
